adding code for simple virtual threads in class SimpleVirtualThread